# holi-interview

./: README.md  main.py  pyproject.toml
data/: telemetry.json
src/: load_data.py  locator.py  query_engine.py
src/nlu_system/: prompt.py  query_examples.py  query_generation.py
src/types/: input_types.py  query_types.py
tests/: test_query_engine.py
