[project]
name = "holi-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "ruff>=0.14.8",
    "tabulate>=0.9.0",
]
